--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,7 +2,23 @@
 	"version": "2.0.0",
 	"tasks": [
 		{
+			"label": "watch-vscode",
 			"path": "./vscode-completions",
+			"type": "npm",
+			"script": "watch",
+			"problemMatcher": "$tsc-watch",
+			"isBackground": true,
+			"presentation": {
+				"reveal": "never"
+			},
+			"group": {
+				"kind": "build",
+				"isDefault": true
+			}
+		},
+		{			
+			"label": "watch-lsp",
+			"path": "./lsp-completions/lsp-client",
 			"type": "npm",
 			"script": "watch",
 			"problemMatcher": "$tsc-watch",
