--- a/lsp-completions/lsp-client/package.json
+++ b/lsp-completions/lsp-client/package.json
@@ -33,12 +33,6 @@
 		"typescript": "^5.6.2"
 	},
 	"dependencies": {
-		"@langchain/community": "^0.3.7",
-		"@langchain/core": "^0.3.13",
-		"@langchain/openai": "^0.3.11",
-		"faiss-node": "^0.5.1",
-		"js-tiktoken": "^1.0.15",
-		"langchain": "^0.3.3",
-		"pickleparser": "^0.2.1"
+	  "vscode-languageclient": "^9.0.1"
 	}
 }
